syntax = "proto3";

package comment;

service CommentService {
    rpc CreateComment(CommentRequest) returns(CommentResponse) {}
    rpc GetComments(ForGetComments) returns (Comments) {}
    rpc GetCommentsForPost(GetAllCommentsRequest) returns (Comments) {}
    rpc DeleteComment(IdRequest) returns (CommentResponse) {}
    rpc UpdateComment(ForUpdate) returns (CommentResponse) {}
    rpc GetComment(GetAllCommentsRequest) returns (Comments) {}
}

message CommentRequest {
    int64 user_id = 1;
    int64 post_id = 2;
    string text = 3;
}

message ForGetComments {
    int64 limit = 1;
    int64 page = 2;
}

message CommentResponse {
    int64 id = 1;
    int64 post_id = 2;
    string post_title = 3;
    int64 user_id = 4;
    string user_name = 5;
    string post_user_name = 6;
    string text = 7;
    string created_at = 8;
}

message GetAllCommentsRequest {
    int64 post_id = 1;
}

message Comments {
    repeated CommentResponse comments = 1;
}

message IdRequest {
    int64 id = 1;
}

message ForUpdate {
    int64 id = 1;
    int64 post_id = 2;
    string text = 3;
    int64 user_id = 4;
}